@@ -21,9 +21,9 @@ CREATE TABLE tx_realurl_pathcache (
 CREATE TABLE tx_realurl_uniqalias (
 	uid int(11) NOT NULL auto_increment,
 	tstamp int(11) DEFAULT '0' NOT NULL,
-	tablename varchar(50) DEFAULT '' NOT NULL,
-	field_alias varchar(30) DEFAULT '' NOT NULL,
-	field_id varchar(30) DEFAULT '' NOT NULL,
+	tablename varchar(60) DEFAULT '' NOT NULL,
+	field_alias varchar(255) DEFAULT '' NOT NULL,
+	field_id varchar(60) DEFAULT '' NOT NULL,
 	value_alias varchar(255) DEFAULT '' NOT NULL,
 	value_id int(11) DEFAULT '0' NOT NULL,
 	lang int(11) DEFAULT '0' NOT NULL,
