@@ -2,6 +2,7 @@
 
 	* Fixed bug #1011393: 2 folder with "exclude from speaking URL" - 404Error
 	* Fixed bug #9545: "exclude from speaking url segment" doesn't work if there are two or more pages with the flag in the same directory
+	* Fixed bug #12137: Field field_alias in table tx_realurl_uniqalias too small when using CONCAT_WS('-',verylongfieldname,other...) in alias_field
 
 2009-10-06  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
